--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 shamefully-hoist=true
 strict-peer-dependencies=false
+registry=https://registry.npmmirror.com
+@types:registry=https://registry.npmmirror.com
+sass_binary_site=https://npmmirror.com/mirrors/node-sass
