--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-module",
+  "name": "nuxt-icon-park",
   "version": "1.0.0",
-  "description": "My new Nuxt module",
+  "description": "Nuxt IconPark module",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -27,7 +27,11 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
+    "@icon-park/vue-next": "^1.4.2",
     "@nuxt/kit": "^3.1.1"
+  },
+  "peerDependencies": {
+    "vue": ">=3.2.45"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
