--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@icon-park/nuxt",
-  "version": "1.0.1",
+  "name": "icon-park-nuxt",
+  "version": "1.0.2",
   "description": "Icon park module for Nuxt",
   "license": "MIT",
   "type": "module",
