--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "icon-park-nuxt",
-  "version": "1.0.2",
+  "name": "nuxt-icon-park",
+  "version": "1.0.1",
   "description": "Icon park module for Nuxt",
   "license": "MIT",
   "type": "module",
