--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nuxt/kit": "^3.1.1"
   },
   "peerDependencies": {
-    "@icon-park/vue-next": "^1.4.2"
+    "@icon-park/vue-next": ">=1.4.2"
   },
   "devDependencies": {
     "@icon-park/vue-next": "^1.4.2",
